[gd_scene load_steps=9 format=2]

[ext_resource path="res://Game.gd" type="Script" id=1]
[ext_resource path="res://LevelTimer.gd" type="Script" id=2]
[ext_resource path="res://SpinnerLableFont.tres" type="DynamicFont" id=3]
[ext_resource path="res://GameSwipeDetector.gd" type="Script" id=4]

[sub_resource type="RectangleShape2D" id=1]

custom_solver_bias = 0.0
extents = Vector2( 345.2, 652.218 )

[sub_resource type="SegmentShape2D" id=2]

custom_solver_bias = 0.0
a = Vector2( -364.662, 1147.54 )
b = Vector2( 277.162, 1149.33 )

[sub_resource type="SegmentShape2D" id=3]

custom_solver_bias = 0.0
a = Vector2( 0, 0 )
b = Vector2( -7.07996, 1236.79 )

[sub_resource type="SegmentShape2D" id=4]

custom_solver_bias = 0.0
a = Vector2( -466.109, 14.6433 )
b = Vector2( -480.212, 1305.03 )

[node name="GameNode2D" type="Node2D" index="0"]

script = ExtResource( 1 )
_sections_unfolded = [ "Material", "Transform", "Visibility" ]
allow_easy_win = false

[node name="GravityTimer" type="Timer" parent="." index="0"]

process_mode = 1
wait_time = 1.0
one_shot = false
autostart = false

[node name="Magnetism" type="Timer" parent="." index="1"]

process_mode = 1
wait_time = 1.0
one_shot = false
autostart = false

[node name="LevelTimer" type="Timer" parent="." index="2"]

process_mode = 1
wait_time = 19.0
one_shot = false
autostart = false
script = ExtResource( 2 )

[node name="LevelTimerLabel" type="Label" parent="LevelTimer" index="0"]

anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -135.0
margin_top = -62.0
rect_pivot_offset = Vector2( 0, 0 )
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
custom_fonts/font = ExtResource( 3 )
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "Anchor", "Focus", "Grow Direction", "Hint", "Margin", "Material", "Mouse", "Rect", "Size Flags", "Theme", "Visibility", "custom_colors", "custom_constants", "custom_fonts", "custom_styles" ]

[node name="GameSwipeDetector" type="Area2D" parent="." index="3"]

input_pickable = true
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
audio_bus_override = false
audio_bus_name = "Master"
script = ExtResource( 4 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="GameSwipeDetector" index="0"]

position = Vector2( 331.557, 640.004 )
shape = SubResource( 1 )

[node name="KinematicBody2D" type="KinematicBody2D" parent="." index="4"]

input_pickable = false
collision_layer = 1
collision_mask = 1
collision/safe_margin = 0.08

[node name="CollisionShape2D" type="CollisionShape2D" parent="KinematicBody2D" index="0"]

position = Vector2( 375.922, 72.9459 )
shape = SubResource( 2 )

[node name="KinematicBody2D2" type="KinematicBody2D" parent="." index="5"]

position = Vector2( 668.775, -10.4397 )
input_pickable = false
collision_layer = 1
collision_mask = 1
collision/safe_margin = 0.08

[node name="CollisionShape2D" type="CollisionShape2D" parent="KinematicBody2D2" index="0"]

position = Vector2( -32.8256, -18.2364 )
shape = SubResource( 3 )

[node name="KinematicBody2D3" type="KinematicBody2D" parent="." index="6"]

position = Vector2( 490.257, -16.7034 )
input_pickable = false
collision_layer = 1
collision_mask = 1
collision/safe_margin = 0.08

[node name="CollisionShape2D" type="CollisionShape2D" parent="KinematicBody2D3" index="0"]

shape = SubResource( 4 )

[connection signal="timeout" from="GravityTimer" to="." method="_gravity_says_its_time"]

[connection signal="timeout" from="LevelTimer" to="." method="_on_LevelTimer_timeout"]

[connection signal="input_event" from="GameSwipeDetector" to="GameSwipeDetector" method="_on_GameSwipeDetector_input_event"]


